8068915: uncommon trap w/ Reason_speculate_class_check causes performance regression due to continuous deoptimizations

Reviewed-by: kvn, roland, jrose